1999-09-29  Mike Welles		<mike@onshore.com> 
	
	*  Corrected one remaining 16 -> 32 bit value in tif_fax3.c, 
	   From Ivo Penzar <ivo.penzar@infolink-software.com. 

	*  Added patch from Ivo Penzar to have TiffAdvanceDirectory handle
	   memory mapped files. <ivo.penzar@infolink-software.com>
	
1999-09-26  Mike Welles 	<mike@onshore.com>  ****3.5.2 release***
	* Corrected alpha versioning.  

	* Removed distinction between  alpha and release targets in Makefile.in. 

	* added release.stamp target, which tags cvs tree, and updates 
	  "RELEASE-DATE"

	* added releasediff target, which diffs tree with source as of 
	  date in "RELEASE-DATE"
	  
	* Ticked up version to 3.5.2 (alpha 01 -- but I think we'll moving 
	  away from alpha/non-alpha distinctions). 

	* updated html to reflect release 
	
1999-09-23    <warmerda@CS46980-B>

	* Set O_BINARY for tif_unix.c open() ... used on cygwin for instance.

	* Added CYGWIN case in configure.

Fri Sep 17 00:13:51 CEST 1999  Mike Welles <mike@onshore.com> 

	* Applied Francois Dagand's patch to handle fax decompression bug. 
	  (sizes >= 65536 were failing) 
	
Tue Sep 14 21:31:43 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Applied "a" mode fix to tif_win32.c/TIFFOpen() as suggested 
	  by Christopher Lawton <clawton@mathworks.com>

Wed Sep  8 08:19:18 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Added IRIX/gcc, and OSF/1 4.x support on behalf of 
	  Albert Chin-A-Young <china@thewrittenword.com>

	* Added TIFFReassignTagToIgnore() API on behalf of 
	  Bruce Cameron <cameron@petris.com>.  Man page still pending.

Wed Aug 25 11:39:07 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>

	* Added test target in Makefile, test_pics.sh script and pics/*.rpt 
	files to provide for a rudimentary testsuite.

	* Added contrib/tags back from old distribution ... fixed up a bit.

1999-08-16    <warmerda@CS46980-B>

	* Added simple makefile.vc makefiles for building with MS VC++