@@ -1,3 +1,6 @@
+1999-11-22  Mike Welles
+	*  Removed LZW Compression to comply with Unisys patent extortion. 
+	
 1999-09-29  Mike Welles		<mike@onshore.com> 
 	
 	*  Corrected one remaining 16 -> 32 bit value in tif_fax3.c, 
